--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ doc/api/
 .flutter-plugins
 .flutter-plugins-dependencies
 lib/generated_plugin_registrant.dart
+/lib/graphql_flutter/access_token.dart
